--- a/index.html
+++ b/index.html
@@ -1,14 +1,47 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>NotesNeo 2.0</title>
-    <link rel="shortcut icon" href="/favicon.png" type="image/x-icon" />
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>NotesNeo 2.0 - Best Academic Notes for MDU Rohtak</title>
+  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <link rel="shortcut icon" href="/favicon.png" type="image/x-icon" />
+
+  <!-- SEO Meta Tags -->
+  <meta name="description"
+    content="Access high-quality academic notes for MDU Rohtak. Download, save, and access personalized study resources on NotesNeo for efficient learning." />
+  <meta name="keywords"
+    content="MDU notes, academic notes, MDU Rohtak, study resources, personalized notes, download notes, NotesNeo" />
+  <link rel="canonical" href="https://notesneo.vercel.app/" />
+
+  <!-- Open Graph Meta Tags for Social Media Preview -->
+  <meta property="og:image" href="/favicon.png" />
+  <meta property="og:site_name" content="NotesNeo">
+  <meta property="og:title" content="NotesNeo | Academic Notes for MDU Rohtak and its Affiliated olleges">
+  <meta property="og:description"
+    content="Access high-quality academic notes for various subjects at MDU Rohtak. Join a community of learners and boost your studies with personalized resources." />
+  <meta property="og:url" content="https://notesneo.vercel.app/" />
+
+</head>
+
+<!--Start of Tawk.to Script-->
+<script type="text/javascript">
+  var Tawk_API = Tawk_API || {}, Tawk_LoadStart = new Date();
+  (function () {
+    var s1 = document.createElement("script"), s0 = document.getElementsByTagName("script")[0];
+    s1.async = true;
+    s1.src = 'https://embed.tawk.to/67342cb14304e3196ae1909a/1ichst6bo';
+    s1.charset = 'UTF-8';
+    s1.setAttribute('crossorigin', '*');
+    s0.parentNode.insertBefore(s1, s0);
+  })();
+</script>
+<!--End of Tawk.to Script-->
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.tsx"></script>
+</body>
+
 </html>
