--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <!-- Open Graph Meta Tags for Social Media Preview -->
   <meta property="og:image" href="/favicon.png" />
   <meta property="og:site_name" content="NotesNeo">
-  <meta property="og:title" content="NotesNeo | Academic Notes for MDU Rohtak and its Affiliated olleges">
+  <meta property="og:title" content="NotesNeo | Academic Notes for MDU Rohtak and its Affiliated Colleges">
   <meta property="og:description"
     content="Access high-quality academic notes for various subjects at MDU Rohtak. Join a community of learners and boost your studies with personalized resources." />
   <meta property="og:url" content="https://notesneo.vercel.app/" />
