--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <meta name="description"
     content="Access high-quality academic notes for MDU Rohtak. Download, save, and access personalized study resources on NotesNeo for efficient learning." />
   <meta name="keywords"
-    content="MDU notes, academic notes, MDU Rohtak, study resources, personalized notes, download notes, NotesNeo" />
+    content="MDU notes, academic notes, MDU Rohtak, study resources, MDU Btech notes, SAITM notes download, NotesNeo" />
   <link rel="canonical" href="https://notesneo.vercel.app/" />
 
   <!-- Open Graph Meta Tags for Social Media Preview -->
