--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="theme-color" content="#ffffff" />
   <title>NotesNeo 2.0 - Best Academic Notes for MDU Rohtak</title>
   <link rel="shortcut icon" href="/favicon.png" type="image/x-icon" />
 
@@ -16,7 +17,7 @@
 
 </head>
 
-<!--Start of Tawk.to Script-->
+<!--Start of Tawk.to AI Chatbot Script-->
 <script type="text/javascript">
   var Tawk_API = Tawk_API || {}, Tawk_LoadStart = new Date();
   (function () {
@@ -28,7 +29,7 @@
     s0.parentNode.insertBefore(s1, s0);
   })();
 </script>
-<!--End of Tawk.to Script-->
+<!--End of Tawk.to AI Chatbot Script-->
 
 <body>
   <div id="root"></div>
