google site veri

--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     content="MDU notes, academic notes, MDU Rohtak, study resources, MDU Btech notes, SAITM notes download, NotesNeo" />
   <link rel="canonical" href="https://notesneo.vercel.app/" />
 
+  <meta name="google-site-verification" content="vvp2OYjF6CFibJc7x2WTbT-4fWFHe6Ue5hYXcaq_LjE" />
+
 </head>
 
 <!--Start of Tawk.to AI Chatbot Script-->
